# blockchain-swarm-robotics

./: .gitignore  CMakeLists.txt  RADIX.RUN1  RADIX.RUNS  RADIX.globalStatistics  RADIX.oneRobotFile  README.md  README_volker.txt  change_difficulty.sh  create_byz_starter.sh  create_geths.sh  create_starter_template.sh  create_template.sh  finished.txt  getcontractaddress.txt  killallgeths  killblockchain  killblockchainall  killblockchainallccall  killblockchainallccallpara  killblockchainallpara  mail.txt  metastarter.sh  readme.txt  rebuild.sh  regenerate.sh  regenerate_template.sh  regeneratefolders.sh  replace_genesis.sh  start_byzantine_again.sh  start_experiment1.sh  start_experiment2.sh  start_from_template.sh  start_from_template_local.sh  start_from_template_para.sh  start_from_template_para1.sh  start_from_template_para1_bg.sh  start_from_template_para2.sh  start_from_template_para3.sh  start_from_template_para_local.sh  (+4 more)
build_antergos/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: ARGoSBuildOptions.cmake  ARGoSPackaging.cmake
contracts/: Byzantine.sol
data/: fake_N.csv  fake_d.csv  fake_exit_prob.csv  fake_exit_prob2.csv  volker_red60_blue401.RUN1  volker_red60_blue401.RUNS  volker_red60_blue401.oneRobotFile  volker_red60_blue4010.RUN1  volker_red60_blue4010.oneRobotFile  volker_red60_blue402.RUN1  volker_red60_blue402.RUNS  volker_red60_blue402.oneRobotFile  volker_red60_blue403.RUN1  volker_red60_blue403.RUNS  volker_red60_blue403.oneRobotFile  volker_red60_blue404.RUN1  volker_red60_blue404.RUNS  volker_red60_blue404.oneRobotFile  volker_red60_blue405.RUN1  volker_red60_blue405.RUNS  volker_red60_blue405.oneRobotFile  volker_red60_blue406.RUN1  volker_red60_blue407.RUN1  volker_red60_blue407.RUNS  volker_red60_blue407.oneRobotFile  volker_red60_blue408.RUN1  volker_red60_blue408.RUNS  volker_red60_blue408.oneRobotFile  volker_red80_blue201.RUN1  volker_red80_blue2010.RUN1  volker_red80_blue202.RUNS  volker_red80_blue202.oneRobotFile  volker_red80_blue203.RUN1  volker_red80_blue203.RUNS  volker_red80_blue203.oneRobotFile  volker_red80_blue204.RUNS  volker_red80_blue205.RUN1  volker_red80_blue205.RUNS  volker_red80_blue206.RUN1  volker_red80_blue207.RUN1  (+48 more)
evaluation/: .Rhistory  1.RUN1  1_clean.RUN1  2.RUN1  2.RUN1.out  2_clean.RUN1  3.RUN1  3.RUN1.out  4.RUN1  4.RUN1.out  aggregate_runs.R  calc_blocktime.R  calc_consensus_time.R  calc_exit_prob_N.R  calc_exit_probability.R  calc_fake_prob.R  clean_file.sh  create_byzantine_plots.R  create_byzantine_plots_combined.R  create_plots.R  create_plots_combined.R  fake_N_consensustime.csv  fake_d.csv  fake_d_consensustime.csv  fake_init_consensustime.csv  fake_python.csv  fake_python_cons.csv  fake_python_exit.csv  get_latest_run.sh  header.txt  myplothelpers.R  plot_fake_probability.R  plot_over_time.R  quick_diff_calc.py  show_blockchain_length.R
execdir/: gethjob-3254.stderr  gethjob-3488.stderr  gethjob-3488.stdout
experiments/: c_epuck_environment_classification.argos  config0.txt  (+12 more)
original_code/code/argos_simulations/Epuck/loop_functions/environment_classification_loop_functions/: CMakeLists.txt  environment_classification_loop_function.cpp  environment_classification_loop_function.h
original_code/code/argos_simulations/Epuck/loop_functions/environment_classification_loop_functions/.svn/: all-wcprops  entries
original_code/code/argos_simulations/Epuck/loop_functions/environment_classification_loop_functions/.svn/text-base/: environment_classification_loop_function.h.svn-base
original_code/code/argos_simulations/Epuck/loop_functions/environment_classification_loop_functions/.svn/tmp/: environment_classification_loop_function.cpp.tmp  tempfile.2.tmp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  startblockchain.sh
src/cmake/: ARGoSBuildChecks.cmake  FindPkgConfig.cmake
src/controllers/: CMakeLists.txt  Makefile  cmake_install.cmake  data.txt  deploy_contract.txt  deploy_contract_old.txt  epuck_blockchain  epuck_environment_classification.cpp  epuck_environment_classification.h  ethereum_rpc_json.cpp  ethereum_rpc_json.h  interactive.txt  new  vote.txt  vote1.txt
(+924 files in other folders)
